--- a/package.json
+++ b/package.json
@@ -3,19 +3,28 @@
   "type": "module",
   "private": true,
   "packageManager": "bun@1.3.5",
-  "module": "index.ts",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "bun run build && wrangler deploy",
     "lint": "bun --bun eslint . --fix",
     "extract": "bun run src/extract.ts",
     "inject": "bun run src/inject.ts"
   },
   "dependencies": {
-    "fflate": "^0.8.2"
+    "fflate": "^0.8.2",
+    "solid-js": "^1.9.10"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.7.3",
     "@types/bun": "latest",
-    "@typescript/native-preview": "^7.0.0-dev.20260104.1",
-    "eslint": "^9.39.2"
+    "@unocss/reset": "^66.1.0",
+    "eslint": "^9.39.2",
+    "typescript": "~5.7.0",
+    "unocss": "^66.1.0",
+    "vite": "^6.0.0",
+    "vite-plugin-solid": "^2.11.0",
+    "wrangler": "^4.0.0"
   }
 }
